; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/extr_builtin-stat.c_perf_stat__get_aggr.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/extr_builtin-stat.c_perf_stat__get_aggr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_stat_config = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }
%struct.perf_cpu_map = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.perf_stat_config*, i32 (%struct.perf_stat_config*, %struct.perf_cpu_map*, i32)*, %struct.perf_cpu_map*, i32)* @perf_stat__get_aggr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @perf_stat__get_aggr(%struct.perf_stat_config* %0, i32 (%struct.perf_stat_config*, %struct.perf_cpu_map*, i32)* %1, %struct.perf_cpu_map* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.perf_stat_config*, align 8
  %7 = alloca i32 (%struct.perf_stat_config*, %struct.perf_cpu_map*, i32)*, align 8
  %8 = alloca %struct.perf_cpu_map*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.perf_stat_config* %0, %struct.perf_stat_config** %6, align 8
  store i32 (%struct.perf_stat_config*, %struct.perf_cpu_map*, i32)* %1, i32 (%struct.perf_stat_config*, %struct.perf_cpu_map*, i32)** %7, align 8
  store %struct.perf_cpu_map* %2, %struct.perf_cpu_map** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %8, align 8
  %13 = getelementptr inbounds %struct.perf_cpu_map, %struct.perf_cpu_map* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp sge i32 %11, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %59

17:                                               ; preds = %4
  %18 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %8, align 8
  %19 = getelementptr inbounds %struct.perf_cpu_map, %struct.perf_cpu_map* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %9, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %10, align 4
  %25 = load %struct.perf_stat_config*, %struct.perf_stat_config** %6, align 8
  %26 = getelementptr inbounds %struct.perf_stat_config, %struct.perf_stat_config* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* %10, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = icmp eq i32 %33, -1
  br i1 %34, label %35, label %49

35:                                               ; preds = %17
  %36 = load i32 (%struct.perf_stat_config*, %struct.perf_cpu_map*, i32)*, i32 (%struct.perf_stat_config*, %struct.perf_cpu_map*, i32)** %7, align 8
  %37 = load %struct.perf_stat_config*, %struct.perf_stat_config** %6, align 8
  %38 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %8, align 8
  %39 = load i32, i32* %9, align 4
  %40 = call i32 %36(%struct.perf_stat_config* %37, %struct.perf_cpu_map* %38, i32 %39)
  %41 = load %struct.perf_stat_config*, %struct.perf_stat_config** %6, align 8
  %42 = getelementptr inbounds %struct.perf_stat_config, %struct.perf_stat_config* %41, i32 0, i32 0
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i32*, i32** %44, align 8
  %46 = load i32, i32* %10, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i32, i32* %45, i64 %47
  store i32 %40, i32* %48, align 4
  br label %49

49:                                               ; preds = %35, %17
  %50 = load %struct.perf_stat_config*, %struct.perf_stat_config** %6, align 8
  %51 = getelementptr inbounds %struct.perf_stat_config, %struct.perf_stat_config* %50, i32 0, i32 0
  %52 = load %struct.TYPE_2__*, %struct.TYPE_2__** %51, align 8
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 0
  %54 = load i32*, i32** %53, align 8
  %55 = load i32, i32* %10, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i32, i32* %54, i64 %56
  %58 = load i32, i32* %57, align 4
  store i32 %58, i32* %5, align 4
  br label %59

59:                                               ; preds = %49, %16
  %60 = load i32, i32* %5, align 4
  ret i32 %60
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
